--- a/app/components/find/hidden_fields_component.html.erb
+++ b/app/components/find/hidden_fields_component.html.erb
@@ -1,4 +1,4 @@
-<% params.reject { |key, _value| key.in?(exclude_keys) }.each do |field_name, field_value| %>
+<% params.except(*exclude_keys).each do |field_name, field_value| %>
   <% if field_value.is_a?(Array) %>
     <% field_value.each do |array_value| %>
       <%= form.hidden_field(field_name, multiple: true, value: array_value) %>
