--- a/app/views/layouts/find_layout.html.erb
+++ b/app/views/layouts/find_layout.html.erb
@@ -27,6 +27,7 @@
         <%= yield %>
       </main>
     </div>
+    <%= debug params %>
     <%= render "layouts/find_footer" %>
   </body>
 </html>
