[530] Fix learn more link for heis/scitts

--- a/app/views/publish/courses/apprenticeship/_form_fields.html.erb
+++ b/app/views/publish/courses/apprenticeship/_form_fields.html.erb
@@ -1,9 +1,11 @@
 <%= render "publish/shared/error_wrapper", error_keys: %i[funding_type program_type], data_qa: "course__funding_type" do %>
+  <h1 class="govuk-heading-l">
+    Teaching apprenticeship
+  </h1>
+
   <fieldset class="govuk-fieldset">
-    <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-      <h1 class="govuk-fieldset__heading">
-        Is this a teaching apprenticeship?
-      </h1>
+    <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
+      Is this a teaching apprenticeship?
     </legend>
 
     <%= render "publish/shared/error_messages", error_keys: %i[funding_type program_type] %>
