--- a/app/views/publish/courses/confirmation.html.erb
+++ b/app/views/publish/courses/confirmation.html.erb
@@ -258,7 +258,7 @@
         <% end %>
       </div>
 
-      <%= f.govuk_submit "Save new course", data: { qa: "course__save" } %>
+      <%= f.govuk_submit "Add course", data: { qa: "course__save" } %>
       <p class="govuk-body">Saving this course will not publish it.</p>
     <% end %>
   </div>
