--- a/app/views/publish/courses/student_visa_sponsorship/edit.html.erb
+++ b/app/views/publish/courses/student_visa_sponsorship/edit.html.erb
@@ -37,11 +37,11 @@
         <p class="govuk-body"><%= t("visa_sponsorships.updated.#{origin_step}") %></p>
       <% end %>
 
-      <% if @course.is_uni_or_scitt? %>
-        <% if !@provider.can_sponsor_student_visa && @provider.university? %>
-          <p class="govuk-body">Learn more about <%= govuk_link_to "recruiting trainee teachers from overseas", "https://www.gov.uk/guidance/recruit-trainee-teachers-from-overseas-accredited-itt-providers" %>.</p>
-        <% end %>
+      <% if @course.is_uni_or_scitt? && !@provider.can_sponsor_student_visa %>
+        <p class="govuk-body">Learn more about <%= govuk_link_to "recruiting trainee teachers from overseas", "https://www.gov.uk/guidance/recruit-trainee-teachers-from-overseas-accredited-itt-providers" %>.</p>
+      <% end %>
 
+      <% if @course.is_uni_or_scitt? %>
         <% question = "Can your organisation sponsor Student visas for this course?" %>
       <% else %>
         <%= render "inset_text" if @course.accrediting_provider.present? %>
