--- a/app/views/publish/courses/apprenticeship/edit.html.erb
+++ b/app/views/publish/courses/apprenticeship/edit.html.erb
@@ -8,6 +8,7 @@
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-full">
+    <%= render CaptionText::View.new(text: course.name_and_code) %>
     <%= form_with model: course,
                   url: apprenticeship_publish_provider_recruitment_cycle_course_path(@course.provider_code, @course.recruitment_cycle_year, @course.course_code),
                   method: :put do |form| %>
@@ -17,5 +18,9 @@
       <%= form.submit "Update teaching apprenticeship",
         class: "govuk-button", data: { qa: "course__save" } %>
     <% end %>
+
+    <p class="govuk-body">
+      <%= govuk_link_to(t("cancel"), details_publish_provider_recruitment_cycle_course_path(@provider.provider_code, @provider.recruitment_cycle.year, @course.course_code)) %>
+    </p>
   </div>
 </div>
