--- a/app/views/publish/courses/_basic_details_tab.html.erb
+++ b/app/views/publish/courses/_basic_details_tab.html.erb
@@ -29,13 +29,15 @@
         <% end %>
       <% end %>
 
-      <% if course.applicable_for_engineers_teach_physics? %>
-        <% summary_list.row(html_attributes: { data: { qa: "course__engineers_teach_physics" } }) do |row| %>
-          <% row.key { "Engineers Teach Physics" } %>
-          <% row.value { course.engineers_teach_physics? ? "Yes" : "No" } %>
-          <% row.action(**{
-            visually_hidden_text: "Engineers Teach Physics",
-          }) %>
+      <% if FeatureService.enabled?(:engineers_teach_physics_on_course) %>
+        <% if course.applicable_for_engineers_teach_physics? %>
+          <% summary_list.row(html_attributes: { data: { qa: "course__engineers_teach_physics" } }) do |row| %>
+            <% row.key { "Engineers Teach Physics" } %>
+            <% row.value { course.engineers_teach_physics? ? "Yes" : "No" } %>
+            <% row.action(**{
+              visually_hidden_text: "Engineers Teach Physics",
+            }) %>
+          <% end %>
         <% end %>
       <% end %>
 
