--- a/app/views/publish/courses/engineers_teach_physics/new.html.erb
+++ b/app/views/publish/courses/engineers_teach_physics/new.html.erb
@@ -9,52 +9,13 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <%= render CaptionText::View.new(text: t("course.add_course")) %>
-
     <%= form_with url: continue_publish_provider_recruitment_cycle_courses_engineers_teach_physics_path(
                     @provider.provider_code,
                     @provider.recruitment_cycle_year,
                   ),
                   method: :get do |form| %>
-
       <%= render "publish/courses/new_fields_holder", form:, except_keys: [:campaign_name] do |fields| %>
-
-        <%#= render "form_fields", form: fields %>
-        <%= render "publish/shared/error_wrapper", error_keys: [:campaign_name], data_qa: "course__engineers_teach_physics" do %>
-          <fieldset class="govuk-fieldset">
-            <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-              <h1 class="govuk-fieldset__heading">
-                Engineers Teach Physics
-              </h1>
-            </legend>
-            <p class="govuk-body">
-              Engineers Teach Physics is a new campaign to help engineers become physics teachers.
-            </p>
-            <p class="govuk-body">
-              For more information, email <%= govuk_mail_to("itt.engagement@education.gov.uk", subject: "Engineers Teach Physics") %>
-            </p>
-            <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
-              <h1 class="govuk-fieldset__heading">
-                Is this course part of the Engineers Teach Physics programme?
-              </h1>
-            </legend>
-            <%= render "publish/shared/error_messages", error_keys: [:campaign_name] %>
-
-            <div class="govuk-radios govuk-!-margin-top-2" data-module="govuk-radios">
-              <% course.edit_course_options["engineers_teach_physics"].each do |value| %>
-                <div class="govuk-radios__item">
-                  <%= form.radio_button :campaign_name,
-                                        value,
-                                        # checked: (@course.campaign_name == value),
-                                        class: "govuk-radios__input" %>
-                  <%= form.label :campaign_name,
-                                value != "" ? t("edit_options.engineers_teach_physics.#{value}.label") : "No",
-                                value:,
-                                class: "govuk-label govuk-radios__label" %>
-                </div>
-              <% end %>
-            </div>
-          </fieldset>
-        <% end %>
+        <%= render "form_fields", form: fields %>
       <% end %>
     <% end %>
 
