--- a/app/views/publish/courses/engineers_teach_physics/_form_fields.html.erb
+++ b/app/views/publish/courses/engineers_teach_physics/_form_fields.html.erb
@@ -27,7 +27,7 @@
                                 # checked: @course.campaign_name == value,
                                 class: "govuk-radios__input" %>
           <%= form.label :campaign_name,
-                        t("edit_options.engineers_teach_physics.#{value}.label"),
+                        t("edit_options.campaign_name.#{value}.label"),
                         value:,
                         class: "govuk-label govuk-radios__label" %>
         </div>
