--- a/app/views/publish/courses/_basic_details_tab.html.erb
+++ b/app/views/publish/courses/_basic_details_tab.html.erb
@@ -29,17 +29,18 @@
         <% end %>
       <% end %>
 
-      <% if FeatureService.enabled?(:engineers_teach_physics_on_course) %>
+      <%# if FeatureService.enabled?(:engineers_teach_physics_on_course) %>
         <% if course.applicable_for_engineers_teach_physics? %>
           <% summary_list.row(html_attributes: { data: { qa: "course__engineers_teach_physics" } }) do |row| %>
             <% row.key { "Engineers Teach Physics" } %>
             <% row.value { course.engineers_teach_physics? ? "Yes" : "No" } %>
             <% row.action(**{
+              href:  engineers_teach_physics_publish_provider_recruitment_cycle_course_path(@provider.provider_code, course.recruitment_cycle_year, course.course_code),
               visually_hidden_text: "Engineers Teach Physics",
             }) %>
           <% end %>
         <% end %>
-      <% end %>
+      <%# end %>
 
       <% unless course.further_education_course? %>
         <% summary_list.row(html_attributes: { data: { qa: "course__age_range" } }) do |row| %>
