name updating on change

--- a/app/views/publish/courses/engineers_teach_physics/_form_fields.html.erb
+++ b/app/views/publish/courses/engineers_teach_physics/_form_fields.html.erb
@@ -2,6 +2,9 @@
   <fieldset class="govuk-fieldset">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
       <h1 class="govuk-fieldset__heading">
+      <% if course.course_code %>
+          <%= render CaptionText::View.new(text: course.name_and_code) %>
+        <% end %>
         Engineers Teach Physics
       </h1>
     </legend>
@@ -24,7 +27,7 @@
         <div class="govuk-radios__item">
           <%= form.radio_button :campaign_name,
                                 value,
-                                # checked: @course.campaign_name == value,
+                                checked: @course.campaign_name == value,
                                 class: "govuk-radios__input" %>
           <%= form.label :campaign_name,
                         t("edit_options.campaign_name.#{value}.label"),
