--- a/app/views/publish/courses/confirmation.html.erb
+++ b/app/views/publish/courses/confirmation.html.erb
@@ -1,6 +1,6 @@
 <% page_title = "Check your answers before confirming" %>
 <% content_for :page_title, title_with_error_prefix(page_title, course.errors.any?) %>
-
+<%# binding.pry %>
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <%= form_with(
