--- a/app/views/publish/courses/_basic_details_tab.html.erb
+++ b/app/views/publish/courses/_basic_details_tab.html.erb
@@ -35,7 +35,7 @@
             <% row.key { "Engineers Teach Physics" } %>
             <% row.value { course.engineers_teach_physics? ? "Yes" : "No" } %>
             <% row.action(**{
-              href: engineers_teach_physics_publish_provider_recruitment_cycle_course_path(@provider.provider_code, course.recruitment_cycle_year, course.course_code),
+              href: engineers_teach_physics_publish_provider_recruitment_cycle_course_path(@provider.provider_code, course.recruitment_cycle_year, course.course_code, course: { subjects_ids: course.subject_ids }),
               visually_hidden_text: "Engineers Teach Physics",
             }) %>
           <% end %>
