--- a/app/views/publish/courses/engineers_teach_physics/_edit_form_fields.html.erb
+++ b/app/views/publish/courses/engineers_teach_physics/_edit_form_fields.html.erb
@@ -40,6 +40,6 @@
         <%= form.hidden_field(:subjects_ids, multiple: true, value: field_value) %>
       <% end %>
     <% end %>
-
+    <%= form.hidden_field(:skip_languages_goto_confirmation, value: params[:skip_languages_goto_confirmation]) %>
   </fieldset>
 <% end %>
