--- a/app/views/publish/courses/_basic_details_tab.html.erb
+++ b/app/views/publish/courses/_basic_details_tab.html.erb
@@ -29,7 +29,7 @@
         <% end %>
       <% end %>
 
-      <%# if FeatureService.enabled?(:engineers_teach_physics_on_course) %>
+      <% if FeatureService.enabled?(:engineers_teach_physics_on_course) %>
         <% if course.master_subject_id == SecondarySubject.physics.id %>
           <% summary_list.row(html_attributes: { data: { qa: "course__engineers_teach_physics" } }) do |row| %>
             <% row.key { "Engineers Teach Physics" } %>
@@ -40,7 +40,7 @@
             }) %>
           <% end %>
         <% end %>
-      <%# end %>
+      <% end %>
 
       <% unless course.further_education_course? %>
         <% summary_list.row(html_attributes: { data: { qa: "course__age_range" } }) do |row| %>
