--- a/app/views/publish/courses/engineers_teach_physics/_edit_form_fields.html.erb
+++ b/app/views/publish/courses/engineers_teach_physics/_edit_form_fields.html.erb
@@ -36,16 +36,15 @@
       <% end %>
     </div>
 
-    <% if params[:course] %>
-      <% params[:course][:subjects_ids].each do |field_value| %>
-        <%= form.hidden_field(:subjects_ids, multiple: true, value: field_value) %>
-      <% end %>
+
+    <% params.dig(:course, :subjects_ids)&.each do |field_value| %>
+      <%= form.hidden_field(:subjects_ids, multiple: true, value: field_value) %>
     <% end %>
-    <% if params[:publish_engineers_teach_physics_form]&.dig(:subjects_ids) %>
-      <% params[:publish_engineers_teach_physics_form][:subjects_ids].each do |field_value| %>
+
+    <% params.dig(:publish_engineers_teach_physics_form, :subjects_ids)&.each do |field_value| %>
         <%= form.hidden_field(:subjects_ids, multiple: true, value: field_value) %>
-      <% end %>
     <% end %>
+
     <%= form.hidden_field(:skip_languages_goto_confirmation, value: params[:skip_languages_goto_confirmation]) %>
   </fieldset>
 <% end %>
