--- a/app/views/support/locations/index.html.erb
+++ b/app/views/support/locations/index.html.erb
@@ -27,7 +27,7 @@
           </td>
           <td class="govuk-table__cell urn">
             <span class="govuk-!-display-block govuk-!-margin-bottom-1">
-              <%= site.urn.presence || "<strong class='govuk-error-message govuk-\!-display-inline'>(Missing)</strong>".html_safe %>
+              <%= site.urn.presence || "<strong class='govuk-error-message govuk-!-display-inline'>(Missing)</strong>".html_safe %>
             </span>
           </td>
         </tr>
