--- a/app/views/publish/courses/engineers_teach_physics/_form_fields.html.erb
+++ b/app/views/publish/courses/engineers_teach_physics/_form_fields.html.erb
@@ -12,7 +12,7 @@
       Engineers Teach Physics is a new campaign to help engineers become physics teachers.
     </p>
     <p class="govuk-body">
-      For more information, email <%= govuk_mail_to(Settings.campaign_email, subject: "Engineers Teach Physics") %>
+      For more information, email <%= govuk_mail_to(Settings.campaign_email, subject: "Engineers Teach Physics", class: "govuk-link") %>
     </p>
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
       <h1 class="govuk-fieldset__heading">
